# shark-experiments

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md
shark-experiments/: CMakeLists.txt
shark-experiments/src/: experiment0.cpp  experiment1.cpp  fitness.cpp
